@@ -8,6 +8,8 @@ version 0.8.8 - Not released, available at https://simupop.svn.sourceforge.net/s
   - CHG: Remove the replicate group feature.
   - NEW: Allow mapSelector to work for all ploidy.
   - DOC: Add keyword applicability to indicate applicability of operators.
+  - DOC: Document applicability of mating schemes.
+  - DOC: Fix bibtex references of user's guide and reference manual.
 
 version 0.8.7 - (Rev 1755) Aug 29, 2008
   - NEW: allow the use of a list to specify a virtual subpopulation.
